cloud/kubernetes/gesture-recognition-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: hand-gesture-recognition-service
spec:
  selector:
    app: hand-gesture-recognition
  ports:
    - protocol: TCP
      port: 80 # Exposes port 80 on the service
      targetPort: 5000 # The port on the container
  type: LoadBalancer # Or NodePort, depending on your needs
