cloud/kubernetes/gesture-recognition-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hand-gesture-recognition-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: <your-domain-name> # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hand-gesture-recognition-service
                port:
                  number: 80
